--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.2.3
   http: ^1.6.0
+  popover: ^0.4.0
 
 dev_dependencies:
   flutter_test:
@@ -60,7 +61,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  # assets: 
+  #   - assets/icons/ 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
