--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_svg: ^2.2.3
   http: ^1.6.0
   popover: ^0.4.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
