--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  flutter_svg: ^2.2.3
   http: ^1.6.0
-  popover: ^0.4.0
   cached_network_image: ^3.4.1
+  carousel_slider: ^5.1.1
 
 dev_dependencies:
   flutter_test:
