--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  http: ^1.6.0
-  cached_network_image: ^3.4.1
-  carousel_slider: ^5.1.1
+  # http: ^1.6.0
+  # cached_network_image: ^3.4.1
+  # carousel_slider: ^5.1.1
 
 dev_dependencies:
   flutter_test:
